<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".presentation.main.MainActivity">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/come_back_to_search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_repo_owner"
        app:srcCompat="@drawable/baseline_arrow_back_24" />

    <TextView
        android:id="@+id/tv_repo_owner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:maxLines="1"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toStartOf="@+id/tv_repo_stars_count"
        app:layout_constraintStart_toEndOf="@+id/btn_back"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Google" />

    <TextView
        android:id="@+id/tv_display_period"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:text="@string/display_period"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@+id/spinner_period"
        app:layout_constraintStart_toStartOf="@+id/btn_back"
        app:layout_constraintTop_toTopOf="@+id/spinner_period" />

    <TextView
        android:id="@+id/tv_repo_stars_count"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@+id/tv_repo_owner"
        app:layout_constraintEnd_toStartOf="@+id/img_star"
        app:layout_constraintTop_toTopOf="@+id/tv_repo_owner"
        tools:text="1200" />

    <ImageView
        android:id="@+id/img_star"
        android:layout_width="24dp"
        android:layout_height="0dp"
        android:contentDescription="@string/stars"
        app:layout_constraintBottom_toBottomOf="@+id/tv_repo_stars_count"
        app:layout_constraintEnd_toEndOf="@+id/tv_repo_name"
        app:layout_constraintTop_toTopOf="@+id/tv_repo_stars_count"
        app:srcCompat="@drawable/baseline_star_rate_24"
        app:tint="#FFC349" />

    <TextView
        android:id="@+id/tv_repo_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:maxLines="1"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_back"
        app:layout_constraintTop_toBottomOf="@+id/tv_repo_owner"
        tools:text="SuperRepository" />

    <Spinner
        android:id="@+id/spinner_period"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_repo_name"
        app:layout_constraintStart_toEndOf="@+id/tv_display_period"
        app:layout_constraintTop_toBottomOf="@+id/tv_repo_name" />

    <com.shawnlin.clickablehistogram.ClickableHistogram
        android:id="@+id/histogram"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:columnMargin="15dp"
        app:columnWidth="35dp"
        app:columnColor="@color/purple_500"
        app:axisColor ="@color/black"
        app:textColor  ="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btn_favourite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_period"
        app:textSize="12sp" />

    <ImageView
        android:id="@+id/progress_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#99FFFFFF"
        android:clickable="true"
        android:contentDescription="@string/loading_more_repositories"
        android:focusable="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/histogram"
        app:layout_constraintEnd_toEndOf="@+id/histogram"
        app:layout_constraintStart_toStartOf="@+id/histogram"
        app:layout_constraintTop_toTopOf="@+id/histogram"
        tools:visibility="visible" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/purple_200"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/progress_background"
        app:layout_constraintEnd_toEndOf="@+id/progress_background"
        app:layout_constraintStart_toStartOf="@+id/progress_background"
        app:layout_constraintTop_toTopOf="@+id/progress_background"
        tools:visibility="visible" />

    <ImageButton
        android:id="@+id/arr_left"
        android:layout_width="60dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/purple_500"
        android:contentDescription="@string/previous_period"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/baseline_arrow_left_24" />

    <ImageButton
        android:id="@+id/btn_favourite"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:contentDescription="@string/add_to_liked"
        app:layout_constraintBottom_toBottomOf="@+id/arr_left"
        app:layout_constraintEnd_toStartOf="@+id/arr_right"
        app:layout_constraintStart_toEndOf="@+id/arr_left"
        app:layout_constraintTop_toTopOf="@+id/arr_left"
        app:srcCompat="@drawable/baseline_remove_like" />

    <ImageButton
        android:id="@+id/arr_right"
        android:layout_width="60dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/purple_500"
        android:contentDescription="@string/next_period"
        app:layout_constraintBottom_toBottomOf="@+id/btn_favourite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_favourite"
        app:srcCompat="@drawable/baseline_arrow_right_24" />

</androidx.constraintlayout.widget.ConstraintLayout>